--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 
         <!-- Add your site or application content here -->
         <p>Hello world! This is HTML5 Boilerplate.</p>
-        <script src="js/main.js"></script>
+        <script src="js/score.js"></script>
     </body>
 </html>
