New direction.... for fun

--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+        <script src="vexflow/build/vexflow/vexflow-min.js"></script>
     </head>
     <body>
-
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <script src="js/score.js"></script>
+        <canvas id="score-main" width="700" height="100"></canvas>
     </body>
 </html>
+g
