Change some things around now that I know hoe vexflow works a bit better

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <script src="bower_components/platform/platform.js"></script>
         <script src="vexflow/build/vexflow/vexflow-min.js"></script>
+        <link rel="import" href="elements/score.html">
     </head>
     <body>
-        <canvas id="score-main" width="700" height="100"></canvas>
+        <smw-score id="mainScore"></smw-score>
     </body>
 </html>
-g
