--- a/elements/scoreHeader.html
+++ b/elements/scoreHeader.html
@@ -1,19 +1,48 @@
-<link rel="import" href="../bower_components/polymer/polymer.html">
-<polymer-element name="smw-scoreHeader">
+<link rel="import" href="../app/components/polymer/polymer.html">
+<polymer-element name="smw-scoreHeader" attributes="title author year tuneType instrument">
     <template>
-        <div id="title">{{title}}</div>
-        <div id="tuneType">{{tuneType}}</div>
-        <div id="instrument">{{instrument}}</div>
-        <div id="composer">{{composer}}</div>
-        <div id="year">{{year}}</div>
+        <style>
+            :host {
+                display: block;
+                flex-direction: column;
+                justify-content: center;
+            }
+            #scoreTitle {
+                font-size: 1.7em;
+                margin: auto;
+                text-align: center;
+                width: 100%;
+            }
+            .infoRegion {
+                float: left;
+                width: 50%;
+            }
+            #headerRight {
+                text-align: right;
+            }
+        </style>
+        <div id="scoreTitle" contenteditable="true">{{scoreTitle}}</div>
+        <div id="scoreInfo">
+            <div id="headerLeft" class="infoRegion">
+                <div id="tuneType" contenteditable="true">{{tuneType}}</div>
+                <div id="instrument" contenteditable="true">{{instrument}}</div>
+            </div>
+            <div id="headerRight" class="infoRegion">
+                <div id="composer" contenteditable="true">{{composer}}</div>
+                <div id="year" contenteditable="true">{{year}}</div>
+            </div>
+        </div>
     </template>
     <script>
-        Polymer('smw-scoreHeader', {
-            title: 'Untitled',
-            tuneType: 'Tune Type',
-            instrument: 'Instrument',
-            composer: 'FirstName LastName',
-            year: 2014
-        });
+        (function() {
+            'use strict';
+            Polymer('smw-scoreHeader', {
+                scoreTitle: 'Untitled',
+                tuneType: 'Tune Type',
+                instrument: 'Instrument',
+                composer: 'FirstName LastName',
+                year: 2014
+            });
+        })();
     </script>
 </polymer-element>
