--- a/elements/score.html
+++ b/elements/score.html
@@ -1,19 +1,14 @@
 <link rel="import" href="../app/components/polymer/polymer.html" />
+<link rel="import" href="scoreControls.html" />
 <link rel="import" href="scoreBody.html" />
 <polymer-element name="smw-score">
     <template>
         <style>
             :host {
                 display: block;
-                height: 1100px;
-                width: 850px;
-                margin: 20px;
-            }
-            :host(.landscape) {
-                height: 850px;
-                width: 1100px;
             }
         </style>
+        <smw-scoreControls></smw-scoreControls>
         <smw-scoreBody id="scoreBody"></smw-scoreBody>
     </template>
     <script>
