--- a/elements/scoreBody.html
+++ b/elements/scoreBody.html
@@ -1,9 +1,9 @@
-<link rel="import" href="../app/components/polymer/polymer.html" />
-<link rel="import" href="../app/components/polymer-ajax/polymer-ajax.html" />
-<link rel="import" href="../app/components/polymer-localstorage/polymer-localstorage.html">
+<link rel="import" href="../bower_components/polymer/polymer.html" />
+<link rel="import" href="../bower_components/polymer-ajax/polymer-ajax.html" />
+<link rel="import" href="scoreSettings.html" />
 <link rel="import" href="scoreHeader.html" />
 <link rel="import" href="scoreCanvas.html" />
-<polymer-element name="smw-scoreBody">
+<polymer-element name="smw-score-body">
     <template>
         <style>
             :host {
@@ -19,28 +19,21 @@
                 width: 1100px;
             }
         </style>
-        <polymer-ajax auto url="/testData/testScore.json"
+        <polymer-ajax auto url="/scottish-writer/testData/testScore.json"
             handleAs="json"
-            on-polymer-response="{{scoreReceived}}">
+            on-polymer-response="{{ scoreReceived }}">
         </polymer-ajax>
-        <polymer-localstorage id="scoreStorage" name="SMWScoreData" value="{{scoreData}}"></polymer-localstorage>
-        <smw-scoreHeader id="scoreHeader" data="{{scoreData}}"></smw-scoreHeader>
-        <smw-scoreCanvas id="scoreCanvas" data="{{scoreData.music}}"></smw-scoreCanvas>
+        <smw-score-settings id="globalSettings"></smw-score-settings>
+        <smw-score-header id="scoreHeader" data="{{ scoreData.header }}"></smw-score-header>
+        <smw-score-canvas id="scoreCanvas" data="{{ scoreData.music }}" settings="{{ scoreSettings }}"></smw-score-canvas>
     </template>
     <script>
         (function() {
             'use strict';
-            Polymer('smw-scoreBody', {
-                ready: function() {
-                    this.scoreData = this.scoreData || {};
-                },
+            Polymer('smw-score-body', {
                 scoreReceived: function(e) {
-                    this.scoreData = e.detail.response || {};
-                },
-                scoreDataChanged: function() {
-                    console.log('scoreData changed');
-                    //this.$.scoreStorage.value = this.scoreData;
-                    //this.$.scoreStorage.save();
+                    this.scoreData = e.detail.response;
+                    this.scoreSettings = this.$.globalSettings.settings;
                 }
             });
         })();
