Add note abstraction

--- a/elements/scoreMeasure.html
+++ b/elements/scoreMeasure.html
@@ -1,4 +1,12 @@
 <link rel="import" href="../bower_components/polymer/polymer.html" />
 <polymer-element name="smw-score-measure" attributes="data context settings">
-    <script src="../js/scoreMeasure.js"></script>
+      <template>
+          <template repeat="{{ note in data.notes }}">
+              <smw-score-note
+                  data="{{ note }}"
+                  context="{{ context }}">
+              </smw-score-note>
+          </template>
+      </template>
+      <script src="../js/scoreMeasure.js"></script>
 </polymer-element>
