Start splitting things out to separate virtual elements

--- a/elements/scoreBody.html
+++ b/elements/scoreBody.html
@@ -19,7 +19,7 @@
                 width: 1100px;
             }
         </style>
-        <polymer-ajax auto url="/scottish-writer/testData/testScore.json"
+        <polymer-ajax auto url="/testData/testScore.json"
             handleAs="json"
             on-polymer-response="{{ scoreReceived }}">
         </polymer-ajax>
