--- a/elements/scoreMeasure.html
+++ b/elements/scoreMeasure.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../bower_components/polymer/polymer.html" />
+<link rel="import" href="scoreNote.html" />
 <polymer-element name="smw-score-measure" attributes="data context settings">
       <template>
           <template repeat="{{ note in data.notes }}">
