--- a/elements/scoreNote.html
+++ b/elements/scoreNote.html
@@ -1,4 +1,4 @@
-<link rel="import" href="../bower_components/polymer/polymer.html" />
-<polymer-element name="smw-score-note" attributes="data context settings">
+<link rel="import" href="../app/components/polymer/polymer.html" />
+<polymer-element name="smw-score-note" attributes="data context">
     <script src="../js/scoreNote.js"></script>
 </polymer-element>
