--- a/elements/scoreSettings.html
+++ b/elements/scoreSettings.html
@@ -1,10 +1,17 @@
-<link rel="import" href="../bower_components/polymer/polymer.html" />
+<link rel="import" href="../app/components/polymer/polymer.html" />
 <polymer-element name="smw-score-settings">
     <script>
         (function() {
             'use strict';
             var globalSettings = {
-                measuresPerStaff: 4
+                measuresPerStaff: 4,
+                staffHeight: 100,
+                orientation: 'portrait',
+                instrument: 'snare',
+                timeSignature: {
+                    beats: 6,
+                    value: 8
+                }
             };
             Polymer('smw-score-settings', {
                 ready: function() {
