--- a/elements/score.html
+++ b/elements/score.html
@@ -1,14 +1,22 @@
 <link rel="import" href="../app/components/polymer/polymer.html" />
 <link rel="import" href="scoreControls.html" />
 <link rel="import" href="scoreBody.html" />
-<polymer-element name="smw-score" noscript>
+<polymer-element name="smw-score">
     <template>
         <style>
             :host {
                 display: block;
             }
         </style>
-        <smw-score-controls></smw-score-controls>
-        <smw-score-body id="scoreBody"></smw-score-body>
+        <smw-score-controls source="{{ source }}"></smw-score-controls>
+        <smw-score-body id="scoreBody" source="{{ source }}"></smw-score-body>
     </template>
+    <script>
+        (function() {
+            'use strict';
+            Polymer('smw-score', {
+                source: ''
+            });
+        })();
+    </script>
 </polymer-element>
