--- a/elements/scoreBody.html
+++ b/elements/scoreBody.html
@@ -1,9 +1,9 @@
 <link rel="import" href="../app/components/polymer/polymer.html" />
-<link rel="import" href="../app/components/polymer-ajax/polymer-ajax.html" />
+<link rel="import" href="../app/components/core-ajax/core-ajax.html">
 <link rel="import" href="scoreSettings.html" />
 <link rel="import" href="scoreHeader.html" />
 <link rel="import" href="scoreCanvas.html" />
-<polymer-element name="smw-score-body">
+<polymer-element name="smw-score-body" attributes="source">
     <template>
         <style>
             :host {
@@ -19,10 +19,12 @@
                 width: 1100px;
             }
         </style>
-        <polymer-ajax auto url="/testData/testScore.json"
+        <core-ajax
+            id="scoreSource"
+            url="{{ source }}"
             handleAs="json"
-            on-polymer-response="{{ scoreReceived }}">
-        </polymer-ajax>
+            on-core-response="{{ scoreReceived }}">
+        </core-ajax>
         <smw-score-settings id="globalSettings"></smw-score-settings>
         <smw-score-header id="scoreHeader" data="{{ scoreData.header }}"></smw-score-header>
         <smw-score-canvas id="scoreCanvas" data="{{ scoreData.music }}" settings="{{ scoreSettings }}" width="{{ width }}"></smw-score-canvas>
@@ -31,9 +33,17 @@
         (function() {
             'use strict';
             Polymer('smw-score-body', {
+                source: '',
+                _setSettings: function(global, overrides) {
+                    global.timeSignature = overrides.music.timeSignature;
+                    return global;
+                },
+                sourceChanged: function() {
+                    this.$.scoreSource.go();
+                },
                 scoreReceived: function(e) {
                     this.scoreData = e.detail.response;
-                    this.scoreSettings = this.$.globalSettings.settings;
+                    this.scoreSettings = this._setSettings(this.$.globalSettings.settings, this.scoreData);
                     this.width = (this.scoreSettings.orientation === 'portrait') ? 850 : 1100;
                 }
             });
