Work on tuplets and scaling

--- a/elements/score.html
+++ b/elements/score.html
@@ -15,7 +15,8 @@
         (function() {
             'use strict';
             Polymer('smw-score', {
-                source: ''
+                source: '/testData/edinburghPolicePipers.json'
+                //source: ''
             });
         })();
     </script>
