--- a/elements/scoreSettings.html
+++ b/elements/scoreSettings.html
@@ -4,8 +4,9 @@
         (function() {
             'use strict';
             var globalSettings = {
+                renderer: 'svg',
                 measuresPerStaff: 4,
-                staffHeight: 125,
+                staffHeight: 200,
                 orientation: 'portrait',
                 instrument: 'snare',
                 timeSignature: {
