--- a/elements/scoreBody.html
+++ b/elements/scoreBody.html
@@ -11,7 +11,7 @@
                 display: block;
                 height: 1100px;
                 margin: 10px;
-                padding: 20px;
+                /*padding: 20px;*/
                 width: 850px;
             }
             :host(.landscape) {
@@ -29,24 +29,5 @@
         <smw-score-header id="scoreHeader" data="{{ scoreData.header }}"></smw-score-header>
         <smw-score-canvas id="scoreCanvas" data="{{ scoreData.music }}" settings="{{ scoreSettings }}" width="{{ width }}"></smw-score-canvas>
     </template>
-    <script>
-        (function() {
-            'use strict';
-            Polymer('smw-score-body', {
-                source: '',
-                _setSettings: function(global, overrides) {
-                    global.timeSignature = overrides.music.timeSignature;
-                    return global;
-                },
-                sourceChanged: function() {
-                    this.$.scoreSource.go();
-                },
-                scoreReceived: function(e) {
-                    this.scoreData = e.detail.response;
-                    this.scoreSettings = this._setSettings(this.$.globalSettings.settings, this.scoreData);
-                    this.width = (this.scoreSettings.orientation === 'portrait') ? 850 : 1100;
-                }
-            });
-        })();
-    </script>
+    <script src="../js/scoreBody.js"></script>
 </polymer-element>
