--- a/elements/scoreCanvas.html
+++ b/elements/scoreCanvas.html
@@ -3,7 +3,14 @@
 <script src="../app/components/vexflow/build/vexflow/vexflow-min.js"></script>
 <polymer-element name="smw-score-canvas" attributes="data settings width height">
     <template>
-        <canvas id="vexflowCanvas" width="{{ width }}" height="{{ height }}"></canvas>
+        <style>
+            .main-canvas {
+                width: {{ width }}px;
+                height: {{ height }}px;
+            }
+        </style>
+        <canvas id="vexflowCanvas" class="main-canvas" width="{{ width }}" height="{{ height }}"></canvas>
+        <!--<canvas id="vexflowCanvas" class="main-canvas"></canvas>-->
         <template repeat="{{ staff in data.staves }}">
             <smw-score-staff
                 data="{{ staff }}"
